src/index.css
body {
  background-color: rgb(5, 5, 5);
  color: rgb(218, 218, 218);
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* width: 1220px;
  margin: 0 auto; */
  text-align: center;
}

a {
  color: rgb(77, 219, 255);
  text-decoration: none;
}

.label-text {
  color: whitesmoke;
}

svg {
  margin-left: 20px;
}

h3 {
  font-size: 12pt;
}

h3.y-axislabel {
  transform: rotate(270deg);
  margin: 0px;
  padding: 0px;
  position: absolute;
  top: 380px;
  left: -78px;
}

h3.x-axislabel {
  margin: 0px;
  padding: 0px;
  position: absolute;
  top: 710px;
  left: 960px;
}

.paragraphs {
  margin-top: 20px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.code-snippet {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 1px;
  padding-bottom: 1px;
  border-radius: 15px;
  background-color: rgb(32, 32, 32);
  font-family: monospace;
  white-space: pre-wrap;
  width: fit-content;
  margin: auto;
  margin-top: 10px;
}

.code-snippet.left {
  text-align: left;
}

.plot {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 1px;
  padding-bottom: 1px;
  border-radius: 15px;
  background-color: rgb(32, 32, 32);
  width: fit-content;
  margin: auto;
  margin-top: 10px;
}

.code-snippet table {
  border: 1px solid white;
  margin: 10px;
  text-align: left;
  border-collapse: collapse;
}

th,
td {
  border: 1px solid white;
}

table .emphasis {
  color: rgb(77, 219, 255);
}

.horizontal-group {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  gap: 13px;
  max-width: 1300px;
  margin: auto;
  margin-bottom: 20px;
}

.paragraph {
  text-align: start;
  max-width: 1200px;
  margin: auto;
  margin-bottom: 20px;
}

.plot svg text {
  fill: white;
  z-index: 100;
}

.plot svg text tspan {
  fill: white;
}

.uh-oh-i-forgot-a-legend {
  position: absolute;
  top: 2000px;
  right: 400;
}

.map {
  position: relative;
}

/*INTERACTIVITY*/

.interactive-data-viz {
  display: flex;
  flex-direction: row;
}

.controller {
  max-width: 250px;
  border-color: white;
  /* background-color: red; */
  text-align: left;
  padding-left: 20px;
}

.card-container {
  background-color: #202020;
  border-radius: 15px;
  padding: 2px;
}

.interactive-table table,
th,
td {
  border: 1px solid;
  border-color: rgb(148, 148, 148);
  margin: 10px;
  text-align: left;
  border-collapse: collapse;
}

.date-label {
  font-size: 14pt;
  text-align: center;
  margin-top: -5px;
}

.controller .input-group {
  display: flex;
  flex-direction: column;
}

input[type='checkbox'] {
  cursor: pointer;
}

